Fixed broken links in index

--- a/index.Rmd
+++ b/index.Rmd
@@ -77,7 +77,7 @@ This is the main motivation for this book, to establish a way of coding that rep
 
 ## Coding standards
 
-Related to this, the Data Science team maintain a [coding standards document](https://departmentfortransport.github.io/ds-processes/Coding_standards/r.html), that outlines some best practices when writing R code. This is not prescriptive and goes beyond the scope of this document, but might be useful for managing your R projects. 
+Related to this, the Data Science team maintain a [coding standards document](https://department-for-transport.github.io/ds-processes/Coding_standards/r.html), that outlines some best practices when writing R code. This is not prescriptive and goes beyond the scope of this document, but might be useful for managing your R projects. 
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
@@ -89,7 +89,7 @@ knitr::write_bib(c(
 
 ## Data
 
-The data used in this book is all derived from opensource data. As well as being availble fro the data folder on the github site [here][(https://github.com/departmentfortransport/R-cookbook/tree/master/data) you can also find the larger data sets at the links below.
+The data used in this book is all derived from opensource data. As well as being availble fro the data folder on the github site [here](https://github.com/departmentfortransport/R-cookbook/tree/master/data) you can also find the larger data sets at the links below.
 
 - [Road Safety Data](https://data.gov.uk/dataset/cb7ae6f0-4be6-4935-9277-47e5ce24a11f/road-safety-data)
 - Search and Rescue Helicopter data; SARH0112 record level data download available under **All data** at the bottom of this [webpage](https://www.gov.uk/government/statistical-data-sets/search-and-rescue-helicopter-sarh01).
@@ -99,6 +99,6 @@ The data used in this book is all derived from opensource data. As well as being
 
 ## Work in progress
 
-This book is not static - new chapters can be added and current chapters can be amended. Please let us know if you have suggestions by raising an issue [here](https://github.com/departmentfortransport/R-cookbook/issues).
+This book is not static - new chapters can be added and current chapters can be amended. Please let us know if you have suggestions by raising an issue [here](https://github.com/department-for-transport/R-cookbook/issues).
 
 
