--- a/03-table-manipulation.Rmd
+++ b/03-table-manipulation.Rmd
@@ -29,12 +29,12 @@ One of the main packages used to manipulate data is the {dplyr} package which we
 
 
 
-## Pivot and reshape tables
+## Pivoting tables
 
-There will be two examples for pivoting tables provided:
+There are two packages still in common use for pivoting data into tidy format.
 
-* The {tidyr} package uses the gather/spread functions and is often used to create tidy data
-* The {reshape2} package is also a useful package to pivot tables and has added functionality such as providing totals of columns etc.
+* The {tidyr} package is a tidyverse package which contains functions used to create tidy data (among other data cleaning functions)
+* The {reshape2} package is the non-tidyverse equivalent used to pivot tables. No updates have been made to this package in the last few years, and where possible tidyr should always be used in preference to it.
 
 
 We want to have the day of the week variable running along the top so each day of the week is its own column.
@@ -227,85 +227,6 @@ Transposed <- Severity %>% tidyr::spread(YearLab, n) %>%
 knitr::kable(Transposed, format.args = list(big.mark = ",")) %>% 
   kableExtra::kable_styling(latex_options="scale_down")
 ```
-
-**{reshape2} package**
-
-Again, this has two functions which can be used to pivot tables:
-
-- **melt** makes wide data longer 
-
-- **dcast** makes long data wider
-
-
-```{r}
-# Pivot table using reshape2 package
-library(reshape2)
-road_accidents_weekdays2 <- 
-  reshape2::dcast(road_accidents_small, Accident_Severity ~ 
-                    Day_of_Week, value.var = "n")
-  
-```
-
-With the `dcast` function above, after stating the name of the data frame, you need to specify the variable(s) you want in long format (multiple variables seperated by "+"), in this case Accident_Severity, and then the wide format variable(s) are put after the tilda (again multiple seperated by "+"). The `value.var` argument specifies which column will be used to populate the new columns, in this case it is n.
-
-```{r, echo = FALSE, results='asis'}
-
-knitr::kable(head(road_accidents_weekdays2),
-caption = "Number of road accidents by accident severity and weekday, reshape2::dcast")
-
-```
-
-If you want to create sums and totals of the tables this can also be done using {reshape2}. For example, taking the original table, we want to pivot it and sum each severity to get the total number of accidents per day.
-
-```{r}
-# Pivot table using reshape2 package
-library(reshape2)
-road_accidents_weekdays3 <- 
-reshape2::dcast(road_accidents_small, Accident_Severity ~ Day_of_Week,
-value.var = "n", sum, margins = "Accident_Severity")
-  
-```
-
-In this example, we use the `margins` argument to specify what we want to combine to create totals. So we want to add all the accident severity figures up for each weekday. Before using `margins` you need to specify how the margins are calculated, in this case we want a `sum`. Alternative options are to calculate the length, i.e. the number of rows.
-
-```{r, echo = FALSE, results='asis'}
-
-knitr::kable(head(road_accidents_weekdays3),
-caption = "Number of road accidents by accident severity and weekday plus totals, reshape2::dcast")
-
-```
-
-
-
-
-The opposite can also be done using the `melt` function.
-
-```{r}
-# Pivot table using reshape2 package
-library(reshape2)
-road_accidents_melt <- reshape2::melt(road_accidents_weekdays2, id.vars = "Accident_Severity",
-                                      measure.vars = c("1", "2", "3", "4", "5", "6", "7"),
-                                      variable.name = "Day_of_Week", value.name = "n")
-  
-```
-
-For the `melt` function you need to specify:
-
-
-`id.vars` = "variables to be kept as columns"
-
-`measure.vars` = c("variables to be created as one column")
-
-`variable.name` = "name of created column using the measure.vars"
-
-`value.name` = "name of value column"
-
-
-```{r, echo = FALSE, results='asis'}
-knitr::kable(head(road_accidents_melt),
-caption = "Number of road accidents by accident severity and weekday, reshape2::melt")
-```
-
 
 ## Dropping and selecting columns
 
